<resources>
    <string name="app_name">OpenSoccer</string>
    <string name="buero">Büro</string>
    <string name="ranking">Ranking</string>
    <string name="transfers">Transfers</string>
    <string name="team">Team</string>
    <string name="saison">Saison</string>
    <string name="verein">Verein</string>
    <string name="anfragen">Anfragen</string>
    <string name="community">Community</string>
    <string name="support">Support</string>
    <string name="menu_hint">Alle Bereiche des Spiels findest Du im Optionsmenü, das Du über die Menü-Taste Deines Gerätes öffnen kannst!</string>
    <string name="cancel">Abbrechen</string>
</resources>
