<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_buero"
        android:title="@string/buero"
        android:icon="@drawable/ic_ab_home"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_ranking"
        android:title="@string/ranking"
        android:orderInCategory="2"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_transfers"
        android:title="@string/transfers"
        android:orderInCategory="3"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_team"
        android:title="@string/team"
        android:orderInCategory="4"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_saison"
        android:title="@string/saison"
        android:orderInCategory="5"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_verein"
        android:title="@string/verein"
        android:orderInCategory="6"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_anfragen"
        android:title="@string/anfragen"
        android:orderInCategory="7"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_community"
        android:title="@string/community"
        android:orderInCategory="8"
        android:showAsAction="never" />
    <item
        android:id="@+id/menu_support"
        android:title="@string/support"
        android:orderInCategory="9"
        android:showAsAction="never" />
</menu>
